Add initial HTML elements. Subject to change

--- a/index.html
+++ b/index.html
@@ -6,6 +6,75 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+   <div class="header">
+        <h3>Header Logo</h1>
+        <ul>
+            <li><a>Header Link One</a></li>
+            <li><a>Header Link Two</a></li>
+            <li><a>Header Link Three</a></li>
+        </ul>
+   </div> 
+
+   <div class="content">
+        <div class="section one">
+            <div class="web-description">
+                <h1>This website is awesome</h1>
+                <p>This website ahs some subtext that goes here under the
+                    main title. It's smaller font and the color is lower
+                    contrast.
+                </p>
+                <button>Sign Up</button>
+            </div>
+            <img alt="this is a placeholder for an image">
+        </div>
+
+        <div class="section two">
+            <h2>Some random information.</h2>
+
+            <div class="container-section-two">
+                <div class="container-image-one">
+                    <img>
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                <div class="container-image-two">
+                    <img>
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                <div class="container-image-three">
+                    <img>
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                <div class="container-image-four">
+                    <img>
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                
+            </div>
+        </div>
+
+        <div class="section three">
+            <p>This is an inspiring quote, or a testimonial
+                from a customer. Maybe it's just filling up space,
+                or maybe people will actually read it. Who knows?
+                All I know is that it looks nice
+            </p>
+            <h5>Thor, God of Thunder</h5>
+        </div>
+
+        <div class="section four">
+            <div class="call-card">
+                <div class="call-text">
+                    <h5>Call to action! It's time!</h5>
+                    <p>Sign upfor our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign Up</button>
+            </div>
+        </div>
+
+   </div>
+
+   <div class="footer">
+        <div class="footer-text">Copyright The Odin Project 2021</div>
+   </div>
 </body>
 </html>
