Rename CSS file. Link file to HTML file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <div class="header">
@@ -19,7 +20,7 @@
         <div class="section one">
             <div class="web-description">
                 <h1>This website is awesome</h1>
-                <p>This website ahs some subtext that goes here under the
+                <p>This website has some subtext that goes here under the
                     main title. It's smaller font and the color is lower
                     contrast.
                 </p>
