Add styles for header

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
    <div class="header">
-        <h3>Header Logo</h1>
-        <ul>
-            <li><a>Header Link One</a></li>
-            <li><a>Header Link Two</a></li>
-            <li><a>Header Link Three</a></li>
+        
+        <h3 class="header-text">Header Logo</h1>
+        <ul class="header-links">
+            <li><a href="facebook.com" target="_blank">header link one</a></li>
+            <li><a href="facebook.com" target="_blank">header link two</a></li>
+            <li><a href="facebook.com" target="_blank">header link three</a></li>
         </ul>
    </div> 
 
