--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
    <div class="content">
         <div class="section one">
             <div class="web-description">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the
+                <h1 class="web-title">This website is awesome</h1>
+                <p class="web-text">This website has some subtext that goes here under the
                     main title. It's smaller font and the color is lower
                     contrast.
                 </p>
-                <button>Sign Up</button>
+                <button class="hero-sign">Sign Up</button>
             </div>
-            <img alt="this is a placeholder for an image">
+            <img src="./images/zuzu.jpg" class="web-image" alt="this is a placeholder for an image">
         </div>
 
         <div class="section two">
