Add styles to section 2

--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
         </div>
 
         <div class="section two">
-            <h2>Some random information.</h2>
+            <h2 class="section-two-text">Some random information.</h2>
 
             <div class="container-section-two">
-                <div class="container-image-one">
-                    <img>
-                    <div>this is some subtext under an illustration or image</div>
+                <div class="cont">
+                    <img src="./images/catge.jpg" class="information-image">
+                    <div class="subtext">this is some subtext under an illustration or image</div>
                 </div>
-                <div class="container-image-two">
-                    <img>
-                    <div>this is some subtext under an illustration or image</div>
+                <div class="cont">
+                    <img src="./images/catge.jpg" class="information-image">
+                    <div class="subtext">this is some subtext under an illustration or image</div>
                 </div>
-                <div class="container-image-three">
-                    <img>
-                    <div>this is some subtext under an illustration or image</div>
+                <div class="cont">
+                    <img src="./images/catge.jpg" class="information-image">
+                    <div class="subtext">this is some subtext under an illustration or image</div>
                 </div>
-                <div class="container-image-four">
-                    <img>
-                    <div>this is some subtext under an illustration or image</div>
+                <div class="cont">
+                    <img src="./images/catge.jpg" class="information-image">
+                    <div class="subtext">this is some subtext under an illustration or image</div>
                 </div>
                 
             </div>
