Add styles for section 3/quotation section

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
         </div>
 
         <div class="section three">
-            <p>This is an inspiring quote, or a testimonial
+            <p class="quote">This is an inspiring quote, or a testimonial
                 from a customer. Maybe it's just filling up space,
                 or maybe people will actually read it. Who knows?
                 All I know is that it looks nice
-            </p>
-            <h5>Thor, God of Thunder</h5>
+               </p> 
+            <h5 class="author">-Thor, God of Thunder</h5>
         </div>
 
         <div class="section four">
