Add styles to section four/ call card

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         <div class="section four">
             <div class="call-card">
                 <div class="call-text">
-                    <h5>Call to action! It's time!</h5>
-                    <p>Sign upfor our product by clicking that button right over there!</p>
+                    <h5 class="call-title">Call to action! It's time!</h5>
+                    <p class="text">Sign up for our product by clicking that button right over there!</p>
                 </div>
-                <button>Sign Up</button>
+                <button class="call-button">Sign Up</button>
             </div>
         </div>
 
